src/test/deca/context/valid/SansObjet/DeclVar-Lower-boolean-float-int.deca
// Description:
//    Declaration of a boolean variable using < operation between a float variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  10.01; 
    int y = 3; 
    boolean z = x < y ; 
}
