src/test/deca/context/invalid/SansObjet/DeclVar-EQ-int-int-float.deca
// Description:
//    Declaration of a int variable using == operation between a int variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  10; 
    float y = 10.01; 
    int z = 10 == 10.01; 
}
